--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -218,7 +218,7 @@ main {
     padding: 1.5rem;
   }
   * img {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 100%;
+    height: auto;
   }
 }
